<resources>
    <string name="preyForAndroid_name">Prey</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="agree">I agree</string>
    <string name="dontagree">I don\'t agree</string>
    <string name="change">Change</string>
    <string name="accept">Accept</string>
    <string name="updating_info_message">Updating information, please wait…</string>
    <string name="already_prey_user">Already a Prey user</string>
    <string name="new_user">New user</string>
    <string name="device_ready_h1">Device ready</string>
    <string name="device_not_ready_h1">Device not ready!</string>
    <string name="device_ready_h2">Your phone is protected and waiting for the activation signal.</string>
    <string name="device_not_ready_h2">Location services are disabled for Prey. Reports will not be sent.</string>
    <string name="login_cp">Log into your Prey account</string>
    <string name="manage_prey_settings">Manage app settings</string>
    <string name="type_your_pass">Type in your password</string>
    <string name="log_in">Log in</string>
    <string name="create_prey_account_h1">Create new account</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="choose_a_6_char_pass">Choose a password</string>
    <string name="repeat_your_pass">Repeat your password</string>
    <string name="create_my_account">Create my account!</string>
    <string name="creating_account_please_wait">Creating account. Please wait…</string>
    <string name="new_account_congratulations_text">You\'ve successfully installed Prey on your device. To finish the setup process you need to verify your email address by following the link we just sent to %s.</string>
    <string name="log_in_to_prey_h1">Log in to Prey</string>
    <string name="your_prey_email">Your Prey account email</string>
    <string name="your_prey_pass">Your Prey account password</string>
    <string name="add_this_device">Add this device!</string>
    <string name="device_added_congratulations_text">You have successfully associated this device with your Prey account. Now take a minute to set it up.</string>
    <string name="device_set_up_h1">Device set up!</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="execution_status">Execution status</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="execution_interval">Execution interval</string>
    <string name="next_execution_in_aprox">Next execution in aprox</string>
    <string name="running_since">Running since</string>
    <string name="elapsed_time">Elapsed time</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="network_ls">Network location service</string>
    <string name="gps_ls">GPS location service</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="sms_activation">SMS activation phrase</string>
    <string name="sms_deactivation">SMS deactivation phrase</string>
    <string name="agreements_title">Welcome to\nPrey for Android™!</string>
    <string name="agreements_message1">Please be sure to read and agree Prey Terms and Conditions by clicking below</string>
    <string name="agreements_message2"><u>Read Agreement</u></string>
    <string name="set_old_user_loading">Attaching device to account…\nJust a sec!</string>
    <string name="set_old_user_no_more_devices_title">Hold your horses!</string>
    <string name="set_old_user_no_more_devices_text">It seems you\'ve run out of free slots for devices on your Prey account.\n\nPlease try removing an existing device on the Control Panel or create a new account.</string>
    <string name="set_new_user_dialog_creating_popup">Creating account. Please wait…</string>
    <string name="congratulations_title">Device Added!</string>
    <string name="preferences_status">Status</string>
    <string name="preferences_status_title">Prey current status</string>
    <string name="preferences_status_summary">Check execution status, time running and more.</string>
    <string name="preferences_config_title">Manage Your Devices</string>
    <string name="preferences_camouflage_title">Camouflage mode</string>
    <string name="preferences_camouflage_summary">Display a fake log in screen</string>
    <string name="preferences_sms_run">SMS activation message</string>
    <string name="preferences_sms_run_summary">Word or phrase that will wake up Prey</string>
    <string name="preferences_sms_run_edittext">Send this text from another device to start Prey</string>
    <string name="preferences_sms_stop">SMS deactivation message</string>
    <string name="preferences_sms_stop_summary">Word or phrase that will stop Prey</string>
    <string name="preferences_sms_stop_edittext">Send this text from another device to stop Prey</string>
    <string name="preferences_lock_sim_screen_title">Active SIM detection</string>
    <string name="preferences_lock_sim_screen_summary">Configure SIM change events</string>
    <string name="preferences_check_sim_change">Warn on SIM change</string>
    <string name="preferences_check_sim_change_summary">Activate Prey if SIM card is replaced</string>
    <string name="choose_your_hero">Choose your hero!</string>
    <string name="no_hero_selected">No hero selected</string>
    <string name="your_hero_text">Your hero will be the chosen one who will receive an SMS message in the event Prey detects a new SIM card on your phone.</string>
    <string name="hero_chosen">Hero chosen!</string>
    <string name="notify_your_hero_now">Good choice! Would you like to let %s know you\'ve selected him as your hero? We\'ll send a quick SMS message.</string>
    <string name="hero_notification_message">I just chose you as my Prey Hero for my Android %s! So if someone else replaces my SIM card you\'ll be notified by SMS. Check out preyproject.com/hero!</string>
    <string name="preferences_destination_sms">Contact to notify</string>
    <string name="preferences_destination_sms_summary">Will be notified by SMS of new device number</string>
    <string name="preferences_destination_sms_not_valid">The contact you entered doesn\'t seem to have a valid mobile phone number</string>
    <string name="sms_to_send_text">Your friend\'s device has a new number as its SIM card has been replaced. Please contact him at %s if you think it may have been stolen.</string>
    <string name="preferences_update_sim_title">Assign to current SIM</string>
    <string name="preferences_update_sim_summary">Assign current SIM as valid</string>
    <string name="preferences_update_sim_dialog_title">Change valid SIM</string>
    <string name="preferences_update_sim_dialog_message">You\'re about to change the registered SIM on this device. By clicking \'Yes\' Prey will assume current one as valid.\n\nAre you sure?</string>
    <string name="gps_network_not_enabled">Location Providers are disabled.\nYou need to activate at least one of them if you wish to track your device.</string>
    <string name="preferences_category_other_title">Account management</string>
    <string name="preferences_category_other_summary">Manage your account settings</string>
    <string name="preferences_password_title">Change password</string>
    <string name="preferences_password_summary">Set your new Prey administration password</string>
    <string name="preferences_password_dialog_title">Please type your\nnew password</string>
    <string name="preferences_password_old">Current password</string>
    <string name="preferences_password_new">New password</string>
    <string name="preferences_password_confirm">Confirm password</string>
    <string name="preferences_password_length_error">Passwords must be at least 6 characters</string>
    <string name="preferences_passwords_do_not_match">Passwords do not match</string>
    <string name="preferences_passwords_updating_dialog">Updating your Prey password.\nPlease wait…</string>
    <string name="preferences_passwords_successfully_changed">Your Prey password was successfully changed</string>
    <string name="preferences_detach_title">Detach device</string>
    <string name="preferences_detach_summary">Deletes this device from your Prey account</string>
    <string name="preferences_detach_dialog_title">Detaching device</string>
    <string name="preferences_detach_dialog_message">Your device will be detached from the Control Panel. This will also delete all its stored reports.\n\nAre you sure?</string>
    <string name="preferences_detach_dettaching_message">Detaching device, please wait…</string>
    <string name="preferences_go_to_control_panel_title">Manage Your Devices</string>
    <string name="preferences_go_to_control_panel_summary">Go to your Prey account</string>
    <string name="preferences_go_to_control_panel_dialog_title">Acknowledge your request</string>
    <string name="preferences_go_to_control_panel_dialog_message">You\'ll be redirected to your Control Panel account.\n\n Are you sure?</string>
    <string name="preferences_category_operations_title">Execution control</string>
    <string name="preferences_category_operations_summary">Start and stop Prey from your device</string>
    <string name="preferences_start_title">Start Prey</string>
    <string name="preferences_start_summary">Mark this device as missing</string>
    <string name="preferences_start_dialog_title">Starting Prey</string>
    <string name="preferences_start_dialog_message">You\'re attempting to mark this device as missing, and start sending reports to the Control Panel.\n\nAre you sure?</string>
    <string name="preferences_stop_title">Stop Prey</string>
    <string name="preferences_stop_summary">Stops prey process and related modules</string>
    <string name="preferences_stop_dialog_title">Stopping Prey</string>
    <string name="preferences_stop_dialog_message">Prey will stop sending reports to the Control Panel and your device will be mark as recovered.\n\nAre you sure?</string>
    <string name="preferences_admin_enabled_title">Revoke extra permissions</string>
    <string name="preferences_admin_enabled_summary">Allows you to uninstall Prey</string>
    <string name="preferences_admin_disabled_title">Grant extra permissions</string>
    <string name="preferences_admin_disabled_summary">Allows lock and uninstall protection</string>
    <string name="preferences_admin_enabled_dialog_title">Please note</string>
    <string name="preferences_admin_enabled_dialog_message">By clicking \'Yes\' you will revoke Prey administration privileges on this device. Without these privileges, Prey won\'t be able to lock your device.\nAre you sure?</string>
    <string name="preferences_admin_disabled_dialog_title">Extra permissions</string>
    <string name="preferences_admin_disabled_dialog_message">You\'re about to grant Prey special security privileges, that will allow you to remotely lock your device.\nClick Yes to continue.</string>
    <string name="device_admin_label">Prey extra security</string>
    <string name="device_admin_description">These privileges are needed to remotely lockdown your device, and will prevent Prey from being uninstalled. You need to revoke these rights later if you wish to uninstall Prey.</string>
    <string name="preferences_admin_enabled_device_title">Extra security</string>
    <string name="preferences_admin_enabled_device_summary">Manage advanced security settings</string>
    <string name="preferences_admin_device_password_check_title">Uninstall Lock</string>
    <string name="preferences_activate_wifi_title">Activate wifi</string>
    <string name="preferences_activate_wifi_summary">Turn on wifi when Prey starts running</string>
</resources>