<?xml version="1.0" encoding="utf-8"?>
<!--
  Created by Carlos Yaconi
  Copyright 2012 Fork Ltd. All rights reserved.
  License: GPLv3
  Full license at "/LICENSE"
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    
           <com.prey.preferences.TextPreference
   		    android:key="PREFS_ACCOUNT_TITLE"
            android:title="@string/preferences_account_title" 
            
            />
           		
           <com.prey.preferences.GoToControlPanelDialogPreference
                android:dialogIcon="@drawable/info"
                android:dialogMessage="@string/preferences_go_to_control_panel_dialog_message"
                android:dialogTitle="@string/preferences_go_to_control_panel_dialog_title"
                android:key="PREFS_GOTO_WEB_CONTROL_PANEL"
                android:negativeButtonText="@string/no"
                android:positiveButtonText="@string/yes"
                android:summary="@string/preferences_go_to_control_panel_summary"
                android:title="@string/preferences_go_to_control_panel_title" />

           <com.prey.preferences.ChangePasswordPreferences
                android:dialogIcon="@drawable/logo"
                android:dialogTitle="@string/preferences_password_dialog_title"
                android:key="PREFS_CHANGE_PASSWORD"
                android:negativeButtonText="@string/cancel"
                android:positiveButtonText="@string/ok"
                android:summary="@string/preferences_password_summary"
                android:title="@string/preferences_password_title" />
           
       
            
       
        

            <com.prey.preferences.DetachDevicePreferences
                android:dialogIcon="@drawable/logo"
                android:dialogMessage="@string/preferences_detach_dialog_message"
                android:dialogTitle="@string/preferences_detach_dialog_title"
                android:key="PREFS_DETACH"
                android:negativeButtonText="@string/no"
                android:positiveButtonText="@string/yes"
                android:summary="@string/preferences_detach_summary"
                android:title="@string/preferences_detach_title" />

</PreferenceScreen>