<?xml version="1.0" encoding="utf-8"?>
<!--
  Created by Carlos Yaconi
  Copyright 2012 Fork Ltd. All rights reserved.
  License: GPLv3
  Full license at "/LICENSE"
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/status_table"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" >

    <TableRow>

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/execution_status" />

        <TextView
            android:id="@+id/status_running"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>
    
    <TableRow android:id="@+id/status_execution_interval_row">

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/execution_interval" />

        <TextView
            android:id="@+id/status_execution_interval"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>
    
    <TableRow android:id="@+id/status_next_execution_in_row">

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/next_execution_in_aprox" />

        <TextView
            android:id="@+id/status_next_execution_in"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow android:id="@+id/status_running_since_row" >

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/running_since" />

        <TextView
            android:id="@+id/status_running_since"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow android:id="@+id/status_elapsed_time_row" >

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/elapsed_time" />

        <TextView
            android:id="@+id/status_elapsed_time"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/network_ls" />

        <TextView
            android:id="@+id/status_network_ls_active"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/gps_ls" />

        <TextView
            android:id="@+id/status_gps_ls_active"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>
    
    <TableRow 
        android:id="@+id/status_no_ls_active_row">
 
        <TextView
            android:layout_column="1"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:text="@string/gps_network_not_enabled"
            android:textSize="15dip"
            android:textColor="#C8000E"
            android:background="#FCA9AC" />

    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF909090" />

    <TableRow>

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/sms_activation" />

        <TextView
            android:id="@+id/status_sms_activation"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_column="1"
            android:padding="3dip"
            android:text="@string/sms_deactivation" />

        <TextView
            android:id="@+id/status_sms_deactivation"
            android:gravity="right"
            android:padding="3dip"
            android:text="" />
    </TableRow>

</TableLayout>
